k8s-deployment/deployment-poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryasg7404.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
