k8s-deployment/deployment-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryasg7404.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: trips
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
