k8s-deployment/ingress-tripviewer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/poi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 8080
      - path: /api/trips(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80        
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
