k8s-deployment/ingress-web-tripviewer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1      
spec:
  rules:
  - http:
      paths:      
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port:
              number: 80
